# syncee-product-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SYNCEE_PRODUCT_RESEARCH_PIPELINE_SPEC_V1.md  docker-compose.yml  pyproject.toml
config/: cj_mapping.yaml  default.yaml  scoring.yaml  syncee_mapping.yaml
src/syncee_scanner/: __init__.py  cli.py  config.py  enrich.py  incremental.py  models.py  pipeline.py  reconcile.py  scan.py
src/syncee_scanner/baserow/: batching.py  client.py  guide.py  indexes.py  mapping.py  persistence.py  repositories.py  schemas.py  setup.py  validation.py  views.py
src/syncee_scanner/browser/: auth.py  navigation.py  network.py  session.py  transport.py
src/syncee_scanner/changes/: detector.py  fingerprints.py
src/syncee_scanner/classification/: collections.py  llm_fallback.py  rules.py
src/syncee_scanner/dashboard/: __init__.py  app.py  auth.py  jobs.py
src/syncee_scanner/discovery/: discover.py  report.py
src/syncee_scanner/export/: csv_export.py  json_export.py  service.py
src/syncee_scanner/extraction/: factory.py  keys.py  mapper.py  normalization.py  (+4 more)
tests/fixtures/: home_kitchen_products.json  syncee_product_detail.json
tests/integration/: test_baserow.py  test_baserow_persistence.py  test_discovery_and_cli.py  test_export_reconcile_resume.py  test_extraction.py  test_funnel.py  test_incremental.py  test_pipeline_end_to_end.py  test_scan.py  test_setup_fields.py  test_syncee_source.py
tests/unit/: test_baserow_setup_payloads.py  test_browser.py  test_changes.py  test_config.py  test_dashboard_auth.py  test_discovery_summarize.py  test_fx.py  test_guide.py  test_keys.py  test_normalization.py  test_observability.py  test_product_scoring.py  test_publishing.py  test_scoring_preserve.py  test_selection.py  test_shipping_markets.py  test_shopify_oauth.py  test_supplier_scoring.py  test_transport.py  test_views.py
(+37 files in other folders)
