[project]
name = "syncee-scanner"
version = "0.1.0"
description = "Syncee Home & Kitchen product research pipeline for RB Home (Baserow-backed)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "RB Home" }]
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pillow>=10.3",
    "psycopg[binary]>=3.2",   # Postgres backend (replaces Baserow at scale)
    "fastapi>=0.115",         # review/approval dashboard
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]
# Publish-prep image cutout path (deterministic background removal). Heavy (onnxruntime);
# only needed to run the cutout engine — the rest of the pipeline works without it.
publish = [
    "rembg>=2.0.65",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "numba>=0.60",
    "pymatting>=1.1.12",
    "scikit-image>=0.24",
    "opencv-python-headless>=4.10",
]

[project.scripts]
syncee-scanner = "syncee_scanner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncee_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: we intentionally use `str, Enum` (not StrEnum) and compare via `.value`.
# UP047: the TypeVar form of generic helpers is clearer here than PEP 695 syntax.
ignore = ["UP042", "UP047"]
